--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 							 <h2 class="major">Contact</h2>
 							 <h3>Contact Us:</h3><p>+91-9821125434</p>
 						<h3>Mail to: </h3><p>kanikakukreja30@gmail.com</p>
+							 <h3>Address: </h3><p>42-C,Siddharth Extension pocket-A, opp to Maharani Bagh-110014, Landmark-Gurudwara Bala Sahib, New Delhi</p>
 							 </article>
 								<!--<form method="post" action="#">
 									<div class="field half first">
@@ -387,6 +388,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				 
 					<footer id="footer">
 					<p><h3>Architect</h3><h2> KANIKA KUKREJA</h2></p>
+					<p><h4>South Delhi</h4></p>
 						<!--<p> Contact Us: 8800765866</p>
 						<p>Mail to: sachansiddharth@ymail.com</p>-->
 					</footer> 
