--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img data-src="images/pic01.jpg" alt="" /></span>
 								<p>We provide CAD Designing ( Interior, Architectural, Civil, Mechanical & Electrical ) .This Education has initiated with the task to fulfill the man power requirement . The institute strength is its intuitive teaching philosophy which is modeled on theories and techniques, which builds a strong foundation in the students. </p></article>
 
 						<!-- Work -->
@@ -113,7 +113,7 @@
 							 <h2 class="major">Contact</h2>
 							 <h3>Contact Us:</h3><p>+91-9821125434</p>
 						<h3>Mail to: </h3><p>kanikakukreja30@gmail.com</p>
-							 <h3>Address: </h3><p>42-C,Siddharth Extension pocket-A, opp to Maharani Bagh-110014, Landmark-Gurudwara Bala Sahib, New Delhi</p>
+							 <h3>Address: </h3><p>O-504, Logix Blossom County, Sector-137, Noida-201301</p>
 							 </article>
 								<!--<form method="post" action="#">
 									<div class="field half first">
@@ -388,7 +388,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				 
 					<footer id="footer">
 					<p><h3>Architect</h3><h2> KANIKA KUKREJA</h2></p>
-					<p><h4>South Delhi</h4></p>
+					<p><h4>NOIDA</h4></p>
 						<!--<p> Contact Us: 8800765866</p>
 						<p>Mail to: sachansiddharth@ymail.com</p>-->
 					</footer> 
